# AmbientLight

./: CMakeLists.txt
src/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  main.cpp
